feature: filter transactions per walletId and date